infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /orders/api/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 5002
          - path: /customers/api/?(.*)
            backend:
              serviceName: customers-srv
              servicePort: 5001
          - path: /?(.*)
            backend:
              serviceName: shop-srv
              servicePort: 4000
